BACKLOG-22203 Fix package export issues with GraalVM that was causing exception logging problems (#642)
* BACKLOG-22203 Fix package export issues with GraalVM that was causing exception logging problems

* BACKLOG-22203 Fix package export issues with GraalVM that was causing exception logging problems
- Add another package that was needed